# base32768-rs

./: Cargo.toml  README.md
benches/: lib.rs
src/: bits_to_bits.rs  data.rs  errors.rs  lib.rs
tests/: lib.rs
